--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         "bench": "vendor/bin/phpbench run --report=benchmark"
     },
     "require": {
-        "php": ">=8.0",
-        "ext-swoole": "*"
+        "php": ">=8.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.25",
