Added more envs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,14 +5,18 @@ jobs:
   lint:
     name: Tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-versions: ['8.1', '8.2', '8.3', 'nightly']
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-    - name: Setup PHP
+
+    - name: Setup PHP ${{ matrix.php-versions }}
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.3'
+        php-version: ${{ matrix.php-versions }}
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
