Updated composer json

--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "lint": "vendor/bin/pint --test",
         "format": "vendor/bin/pint",
         "check": "vendor/bin/phpstan analyse -c phpstan.neon",
-        "test": "vendor/bin/phpunit --configuration phpunit.xml",
-        "bench": "vendor/bin/phpbench run --report=benchmark"
+        "test": "vendor/bin/phpunit --configuration phpunit.xml"
     },
     "require": {
         "php": ">=8.1"
