--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: ['8.1', '8.2', '8.3', 'nightly']
+        php-versions: ['8.2', '8.3', 'nightly']
 
     steps:
     - name: Checkout repository
